--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-world-flags": "^1.4.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
+    "@types/react-world-flags": "^1.4.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
