--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
+    "fs-extra": "^10.0.1",
+    "js-file-download": "^0.4.12",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -18,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-world-flags": "^1.4.0",
     "typescript": "^4.5.5",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,6 +51,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.1",
+    "@types/fs-extra": "^9.0.13",
     "@types/react-world-flags": "^1.4.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
